Refactor Main, extract  priorizarEmergencias from atenderEmergenciaMenu